@@ -27,6 +27,11 @@ strong, b, .bold		{font-weight:bold; color:inherit;}
 :-moz-focusring			{outline:2px solid #53B4ED;}
 
 
+/*	Play nice with Google Translate font tags
+	============================================= */
+font					{display:inline;}
+
+
 /*	Main wrappers for content & fixed background img
 	============================================= */
 .portal					{-moz-box-sizing:border-box; -webkit-box-sizing:border-box; box-sizing:border-box; display:table; width:100%; height:100%;}
