@@ -1,3 +1,8 @@
+Development Portal (2017-07-28 shi)
+==============================
+Added font css for Google translate
+
+
 Development Portal (2017-06-19 shi)
 ==============================
 Fixed input font color for generator
